Add Google AdSense to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Job Board - Find Your Dream Career</title>
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4815031994479279"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
