Add comprehensive SEO optimization: meta tags, Open Graph, Twitter Cards, structured data, robots.txt, sitemap

--- a/index.html
+++ b/index.html
@@ -3,13 +3,90 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Job Board - Find Your Dream Career</title>
+
+  <!-- Primary Meta Tags -->
+  <title>Job Board - Find Your Dream Career | Latest Fresher Jobs 2025</title>
+  <meta name="title" content="Job Board - Find Your Dream Career | Latest Fresher Jobs 2025" />
+  <meta name="description"
+    content="Discover latest job opportunities from top companies like Google, Capgemini, TCS, Wipro, and more. Find fresher jobs, software engineer positions, and analyst trainee roles across India." />
+  <meta name="keywords"
+    content="job board, fresher jobs, software engineer jobs, analyst trainee, jobs in India, Google jobs, Capgemini careers, TCS recruitment, Wipro hiring, IT jobs, tech jobs 2025" />
+  <meta name="author" content="Job Board" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="BAfC9sYuEjwUxuHGlRYGNgXK99txki7upFTVyj485aQ" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.jobfresh.in/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.jobfresh.in/" />
+  <meta property="og:title" content="Job Board - Find Your Dream Career | Latest Fresher Jobs 2025" />
+  <meta property="og:description"
+    content="Discover latest job opportunities from top companies like Google, Capgemini, TCS, Wipro. Find fresher jobs, software engineer positions across India." />
+  <meta property="og:image" content="https://www.jobfresh.in/og-image.jpg" />
+  <meta property="og:site_name" content="Job Board" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://www.jobfresh.in/" />
+  <meta name="twitter:title" content="Job Board - Find Your Dream Career | Latest Fresher Jobs 2025" />
+  <meta name="twitter:description"
+    content="Discover latest job opportunities from top companies like Google, Capgemini, TCS, Wipro. Find fresher jobs, software engineer positions across India." />
+  <meta name="twitter:image" content="https://www.jobfresh.in/twitter-image.jpg" />
+
+  <!-- Theme Color for Mobile Browsers -->
+  <meta name="theme-color" content="#2563eb" />
+  <meta name="msapplication-TileColor" content="#2563eb" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+  <!-- Preconnect to External Domains for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://pagead2.googlesyndication.com" />
 
   <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4815031994479279"
     crossorigin="anonymous"></script>
+
+  <!-- Structured Data - Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Job Board",
+    "url": "https://www.jobfresh.in/",
+    "description": "Find latest job opportunities from top companies across India. Browse fresher jobs, software engineer positions, and analyst trainee roles.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.jobfresh.in/?search={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- Structured Data - Organization/JobBoard -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Job Board",
+    "url": "https://www.jobfresh.in/",
+    "logo": "https://www.jobfresh.in/logo.png",
+    "description": "Leading job board platform connecting job seekers with top companies across India",
+    "sameAs": [
+      "https://twitter.com/jobboard",
+      "https://linkedin.com/company/jobboard"
+    ]
+  }
+  </script>
 </head>
 
 <body>
