--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Ezoic Privacy Scripts (Must load first) -->
+  <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
+  <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
+
+  <!-- Ezoic Header Script -->
+  <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
+  <script>
+    window.ezstandalone = window.ezstandalone || {};
+    ezstandalone.cmd = ezstandalone.cmd || [];
+  </script>
+
   <!-- Primary Meta Tags -->
   <title>Job Board - Find Your Dream Career | Latest Fresher Jobs 2025</title>
   <meta name="title" content="Job Board - Find Your Dream Career | Latest Fresher Jobs 2025" />
